--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
         <div class="modal">
             <button class="modal-button" data-modal-close>
                 <svg class="modal-button-icon" width="18" height="18">
-                    <use href="./images/icon.svg/close-black-icon.svg"></use>
+                    <use href="./images/icon.svg/symbol-defs.svg#close-modal-icon"></use>
                 </svg>
             </button>
         </div>
