--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                 </address>
             </div>
             <div class="footer-div-contact">
-                <h2 class="come-in"><strong>ПРИЄДНУЙТЕСЬ</strong></h2>
+                <p class="come-in">ПРИЄДНУЙТЕСЬ</p>
                 <ul class="footer-social-list">
                     <li class="item">
                         <a href="" class="footer-social-link" target="_blank" rel="noopener noreferrer" aria-label="instagram icon">
