--- a/portfolio.html
+++ b/portfolio.html
@@ -228,7 +228,7 @@
                 </address>
             </div>
             <div class="footer-div-contact">
-                <p class="come-in"><strong>ПРИЄДНУЙТЕСЬ</strong></p>
+                <p class="come-in">ПРИЄДНУЙТЕСЬ</p>
                 <ul class="footer-social-list">
                     <li class="item">
                         <a href="" class="footer-social-link" target="_blank" rel="noopener noreferrer"
